# src/api/controllers/user.js
@@ -1,0 +1,15 @@
+'use strict';
+
+function createUser(req, res) {
+  // res.status(404).send(`<h1>404: Invalid name: ${name}</h1>`);
+}
+
+function getUserInfo(req, res) {}
+
+function getParticipants(req, res) {}
+
+module.exports = {
+  createUser, createUser,
+  getUserInfo: getUserInfo,
+  getParticipants: getParticipants
+};
